--- a/volatility_breakout/basic.ipynb
+++ b/volatility_breakout/basic.ipynb
@@ -1153,11 +1153,76 @@
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "668f4928351db821"
+   "cell_type": "markdown",
+   "source": [
+    "## 추가 정리\n",
+    "\n",
+    "#### Case 1)\n",
+    "$\n",
+    "\\text{목표가(진입가)} = \\text{당일 시가} + (\\text{전일 고가} - \\text{전일 저가}) \\times k\n",
+    "$\n",
+    "\n",
+    "당일의 시가를 기준으로 전일의 가격 변동폭을 더해 돌파 라인을 설정하는 방식이다. 전일 장마감 이후 당일 시장에 영향을 미칠수 있는 요소가 당일의 시가에 포함된다고 가정하여 **순수히 개장 이후의 주가 움직임을 매매에 반영하겠다** 는 의미로 해석하면 되겠다. \n",
+    "\n",
+    "#### Case 2)\n",
+    "\n",
+    "$\n",
+    "\\text{목표가(진입가)} = \\text{전일 종가} + (\\text{전일 고가} - \\text{전일 저가}) \\times k\n",
+    "$\n",
+    "\n",
+    "이번엔 기준가를 전일 종가로 설정한 경우다. 이렇게 설정해서 얻고자 하는 것은 **당일의 시가가 돌파 라인을 넘어서 시작하는 경우 시가에 바로 매수를 수행할 수 있다는 점이다.** 또 거래의 제한 사항으로 당일의 시가를 포함 시킬 수 있다는 점이다. '난 7% 이상 시가가 올라서 시작하는 종목은 거래하고 싶지 않아' 이런 생각을 반영해줄 수 있는 돌파 라인이다.\n",
+    "\n",
+    "\n",
+    "#### Case 3)\n",
+    "Case 2번의 돌파 라인은 그대로 사용하고 부가 조건으로 시가가 돌파 라인을 넘어서 시작하는 경우에만 매수를 수행하는 방식이다.\n",
+    "\n",
+    "$\n",
+    "\\text{목표가(진입가)} = \\text{전일 종가} + (\\text{전일 고가} - \\text{전일 저가}) & \\text{시가} <= \\text{돌파 라인}\n",
+    "$\n",
+    "\n",
+    "Case 2번의 경우보다 안정적이고 종가 수익률의 평균이 음수가 아닌 경우도 확인된다. 시가의 위치가 큰 영향을 미친다. 되도록 높게 시작한 종목은 피해서 매매를 계획해야겠다.\n",
+    "\n",
+    "#### Case 4)\n",
+    "Case 3번 보다는 시가의 높이를 더욱 제한해보자. 전일의 종가와 돌파 라인의 중간값 보다 시가가 낮게 설정된 경우다.\n",
+    "\n",
+    "\n",
+    "$\n",
+    "\\text{목표가(진입가)} = \\text{전일 종가} + (\\text{전일 고가} - \\text{전일 저가}) & \\text{시가} <= \\text{돌파 라인} & \\text{시가} <= (돌파 라인 + 전일종가) / 2\n",
+    "$\n",
+    "\n",
+    "눈에 띄는 것은 수익률의 변동폭이 더 줄어든 것 말고는 특별하지 않다.\n",
+    "\n",
+    "#### Case 5)\n",
+    "코스닥 시가가 전일의 코스닥 종가보다 같거나 높게 시작한 경우만 거래하는 것이다.\n",
+    "\n",
+    "$\n",
+    "\\text{목표가(진입가)} = \\text{전일 종가} + (\\text{전일 고가} - \\text{전일 저가}) & \\text{코스닥 시가} >= \\text{코스닥 전일 종가}\n",
+    "$\n",
+    "\n",
+    "비교했을 때 매매가 안정적으로 변했다. 종가 수익률 평균이 전체적으로 높아졌고 수익률 변동폭이 낮아졌다.\n",
+    "\n",
+    "#### Case 6)\n",
+    "\n",
+    "코스닥 시가가 코스닥 전일종가 보다 낮게 시작한 경우는 어떨까?\n",
+    "\n",
+    "$\n",
+    "\\text{목표가(진입가)} = \\text{전일 종가} + (\\text{전일 고가} - \\text{전일 저가}) & \\text{코스닥 시가} < \\text{코스닥 전일 종가}\n",
+    "$\n",
+    "\n",
+    "코스닥 시가는 역사적으로 시가가 전일종가 보다 낮게 시작하는 경우가 20% 밖에 되지 않는가 보다. 평균 종목수로 추론이 가능하다. 시장 전체가 가격이 낮게 출발하는 경우는 수익률 변동폭이 훨씬 크다. 아마도 시가에 비해 돌파 라인이 상대적으로 높아져서 발생한 결과가 아닐까 생각된다. k의 값이 커질 수록 수익률 변동폭이 커지는 것과 같은 현상인 것이다. \n",
+    "\n",
+    "최고 수익률, 종가 수익률의 수치만 보아도 거래 비용을 생각하면 운용이 불가능한 상태다.\n",
+    "\n",
+    "결론\n",
+    "- 변동성 돌파 라인의 기준가를 시가로 설정하는 경우가 안정적이다.\n",
+    "- 변동성 돌파 라인의 기준가를 전일종가로 설정하는 경우 시가가 낮을수록 안정적이다.\n",
+    "- 시장의 가격이 전일종가 보다 낮지 않게 시작하는 것이 안정적이다.\n",
+    "\n",
+    "### 참고\n",
+    "- [변동성 돌파 전략 - 비트코인 수익률 백테스트](https://wellsw.tistory.com/132)\n",
+    "- [데이터로 본 변동성 돌파 전략(1편)](https://m.hub.zum.com/invest_62/106400)"
+   ],
+   "id": "7d3e850666f9d6bf"
   }
  ],
  "metadata": {
